[tool.poetry]
name = "TK8-thing"
version = "0.1.0"
description = ""
authors = ["Omer Elgoni <omer.elgoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pyyaml = "^6.0.1"
scipy = "^1.13.0"
requests = "^2.32.3"
rustworkx = "^0.15.1"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
